# libfm

./: NEWS  configure.ac
docs/reference/libfm/: libfm-docs.xml  libfm-sections.txt
po/: POTFILES.in  libfm.pot
src/: Makefile.am  fm-gtk.h  fm.c  fm.h
src/base/: fm-app.c  fm-app.h  fm-bookmarks.c  fm-bookmarks.h  fm-config.c  fm-config.h  fm-dummy-monitor.c  fm-dummy-monitor.h  fm-file-info.c  fm-file-info.h  fm-folder.c  fm-folder.h  fm-module.c  fm-module.h  fm-path.c  fm-path.h  fm-utils.c  fm-utils.h
src/demo/: main-win.c
src/gtk/: fm-file-properties.c  fm-folder-icon-view.c  fm-folder-list-view.c  fm-folder-model.c  fm-folder-model.h  fm-folder-view.c  fm-folder-view.h  fm-gtk-utils.c  fm-gtk-utils.h  fm-path-entry.c  fm-places-model.c  fm-standard-view.c  fm-standard-view.h
src/gtk/ui/: Makefile.am  gtk-ui.vala  rename-dlg.vala
src/job/: fm-deep-count-job.c  fm-deep-count-job.h  fm-dir-list-job.c  fm-dir-list-job.h  fm-file-info-job.c  fm-file-info-job.h  fm-file-ops-job-delete.c
src/jobs/: Makefile.am  copy-job.vala  delete-job.vala  file-job.vala  job.vala  jobs.vala  query-info-job.vala  trash-job.vala
src/modules/: Makefile.am  vfs-search.c
src/tests/: Makefile.am
src/vapi/: config.vapi  libfm.vapi
